corrected overflow bar on large screens

--- a/styles.css
+++ b/styles.css
@@ -1090,6 +1090,7 @@ SMALL LAPTOPS, TABLETS AND LARGE SMARTPHONES
     height: 100%;
     position: relative;
     margin-top: 48px;
+    overflow: hidden;
   }
 
   .threecolumn__card {
@@ -1261,6 +1262,7 @@ SMALL LAPTOPS, TABLETS AND LARGE SMARTPHONES
     height: 85%;
     position: relative;
     margin-top: 4px;
+    overflow: hidden;
 }
 
 .faqs__card-title {
